--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,8 +5,12 @@ on:
     branches: [ "main", "master" ]
   workflow_dispatch:
 
+# 【重要】给予发版权限，否则无法创建 Release
+permissions:
+  contents: write
+
 jobs:
-  build-on-cloud:
+  build-and-release:
     runs-on: windows-latest
 
     steps:
@@ -16,16 +20,19 @@ jobs:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2
 
-    # 【关键修改】
-    # 添加了 /p:PlatformToolset=v143 参数
-    # 强制使用 VS2022 的编译器，忽略项目原本要求的 VS2013
+    # 编译 (使用 v143 兼容模式)
     - name: Build
       run: msbuild keycastow.vcxproj /p:platform=win32 /p:Configuration=Release /p:PlatformToolset=v143
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
+    # 【新增步骤】自动发布到 Releases 页面
+    - name: Create Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main'
       with:
-        name: KeyCastOW-Release
-        path: |
+        tag_name: latest       # 强制使用 "latest" 这个标签
+        name: Latest Auto Build # Release 的标题
+        draft: false
+        prerelease: false
+        files: |               # 要上传的文件
           **/Release/*.exe
           **/Release/*.dll
